# susi-ml-final

./: .gitignore  README.md  Susi_SemesterProject.docx  conf.json  data.py  inference.py  main.py  model.py  pyproject.toml  requirements.txt  train.py  visualizer.py
colab/: main.py  requirements.txt
models128x128/: res.json
models256x256/: res.json
models64x64/: res.json
