[project]
name = "finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "pip>=25.3",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
